Added restart link

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="basic.css">
   </head>
   <body>
-    <h1><a href="basic.js">View source</a></h1>
+    <h1><a href="basic.js">View source</a> <a href="basic.html">Restart</a></h1>
     <h1>Basic example 1</h1>
     <h2 id="basic-example-1"></h2>
     
