--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="advanced.css">
   </head>
   <body>
-    <h1><a href="advanced.js">View source</a></h1>
+    <h1><a href="advanced.js">View source</a> <a href="advanced.html">Restart</a></h1>
     <h1>Advanced example 1</h1>
     <div id="advanced-example-1"></div>
     
