Minor changes to md and examples

--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -15,20 +15,8 @@
     
     <h1>Advanced example 3</h1>
     <div id="advanced-example-3"></div>
-    
-    <h1>Advanced example 4</h1>
-    <div id="basic-example-4-1"></div>
-    <div id="basic-example-4-2"></div>
-    <div id="basic-example-4-3"></div>
-    <div id="basic-example-4-4"></div>
-    <div id="basic-example-4-5"></div>
-    <div id="basic-example-4-6"></div>
-    <div id="basic-example-4-7"></div>
-    <div id="basic-example-4-8"></div>
-    <div id="basic-example-4-9"></div>
-    <div id="basic-example-4-10"></div>
-    <div id="basic-example-4-11"></div>
-    <div id="basic-example-4-12"></div>
-    <div id="basic-example-4-13"></div>
+   
+    <h1>Advanced example 4 (Background color)</h1>
+    <div id="advanced-example-4"></div>
   </body>
 </html>
