Fixed wrong caps

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -22,7 +22,6 @@
     <h1>Basic example 5</h1>
     <div id="basic-example-5"></div>
     
-    <script src="Basic.js"></script>
-        
+    <script src="basic.js"></script>
   </body>
 </html>
