--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="../build/sekvens-global.min.js"></script>
+    <script src="../build/sekvens-global.js"></script>
     <link rel="stylesheet" href="basic.css">
   </head>
   <body>
